# somafm_tui

./: .SRCINFO  .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  PKGBUILD  README.md  __init__.py  http_client.py  install.sh  models.py  mpris_service.py  player.py  pyproject.toml  requirements.txt  somafm  somafm.bash  somafm.fish  somafm.py  somafm.sh  stream_buffer.py  themes.json  themes.py  ui.py
.cursor/rules/: smfm-rules.mdc  somafmtui-rules.mdc
.github/workflows/: README.md  auto-version-tag.yml  ci.yml  opencode.yml  publish-aur.yml  publish.yml  qwen-dispatch.yml  qwen-invoke.yml  qwen-review.yml  qwen-scheduled-triage.yml  qwen-triage.yml  sync-pypi-version.yml
scripts/: README.md  release.sh  sync_version.py  verify-pkgbuild.sh
somafm_tui/: __init__.py  __main__.py  bitrate_utils.py  channels.py  cli.py  config.py  constants.py  http_client.py  models.py  mpris_service.py  player.py  terminal.py  themes.json  themes.py  timer.py  ui.py
somafm_tui/core/: __init__.py  input.py  playback.py  state.py
somafm_tui_ts/: README.md  package-lock.json  package.json  themes.json  tsconfig.json
somafm_tui_ts/src/: index.tsx  node-mpv.d.ts
somafm_tui_ts/src/components/: App.tsx  ChannelList.tsx  (+5 more)
tests/: README.md  __init__.py  conftest.py  test_bitrate_utils.py  test_channels.py  test_cli.py  test_config.py  test_http_client.py  test_input.py  test_models.py  test_mpris_service.py  test_playback.py  test_player.py  test_state.py  test_terminal.py  test_themes.py  test_timer.py  test_ui.py
(+11 files in other folders)
