[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somafm-tui"
version = "0.5.12"
description = "Terminal user interface for SomaFM internet radio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "zsh-ncursed", email = "zsh.ncursed@gmail.com"}
]
keywords = ["somafm", "radio", "tui", "terminal", "music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "requests>=2.25.0",
    "python-mpv>=0.5.0",
    "dbus-next>=0.2.0; platform_system=='Linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pylint>=2.0",
]

[project.scripts]
somafm-tui = "somafm_tui.player:main"

[project.urls]
Homepage = "https://github.com/zsh-ncursed/somafm_tui"
Repository = "https://github.com/zsh-ncursed/somafm_tui"
AUR = "https://aur.archlinux.org/packages/somafm_tui"

[tool.setuptools.packages.find]
where = ["."]
include = ["somafm_tui*"]

[tool.setuptools.package-data]
somafm_tui = ["themes.json"]
